add the footer of the portfolio

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
             <p>Victor thinks that awareness is the key to success in life, which he demonstrates via his chess, sports, and travel hobbies. Victor is a current Moringa School student who is always up for a challenge. To connect, send an email to mmulahvictor@gmail.com.</p>
         </div>
     </section>
+    <section>
+        <footer>
+            <h2>Services</h2>
+            <div>
+                <h3>Web Development</h3>
+                <img src="./assets/images/undraw_Code_typing_re_p8b9.png" alt="code_typing">
+            </div>
+            <div>
+                <h3>Software Design</h3>
+                <img src="./assets/images/undraw_Design_objectives_re_94pd.png" alt="design icon">
+            </div>
+        </footer>
+    </section>
 
     <script type="text/javascript" src="index.js"></script>
     
