style the header section

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
 
     <header>
-        <div>
-            <div>
+        <div class="header">
+            <div id="header1">
                 <h3>Hello</h3>
                 <h1>I am Victor Mmulah</h1>
                 <h2>Software Developer <br> &amp; Designer</h2>
             </div>
-            <div></div>
+            <div id="header2"></div>
+            <img src="./assets/images/transparent-bg-designify.png" alt="Victor's image">
         </div>
-        <img src="./assets/images/transparent-bg-designify.png" alt="Victor's image">
     </header>
     <section>
         <h1>About me</h1>
