style the content section

--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
                 <h2>Software Developer <br> &amp; Designer</h2>
             </div>
             <div id="header2"></div>
-            <img src="./assets/images/transparent-bg-designify.png" alt="Victor's image">
+            <img src="./assets/images/transparent-bg-designify.png" alt="Victor's image" id="img1">
         </div>
     </header>
-    <section>
+    <section id="content">
         <h1>About me</h1>
-        <div>
-            <p>Victor Mmulah is a software engineer with expertise in web development and software design. His expertise in strategy, graphic design, and web development informs his cautious yet aggressive approach. He is motivated by his desire to comprehend modern technologies. He saw himself as a "forever learner," keen to expand on her academic grounding in software development while also staying up to date on the latest technological tactics through continuing education.
-            </p>
-            <p>Victor thinks that awareness is the key to success in life, which he demonstrates via his chess, sports, and travel hobbies. Victor is a current Moringa School student who is always up for a challenge. To connect, send an email to mmulahvictor@gmail.com.</p>
+        <div class="about-me">
+            <div>
+                <p>Victor Mmulah is a software engineer with expertise in web development and software design. His expertise in strategy, graphic design, and web development informs his cautious yet aggressive approach. He is motivated by his desire to comprehend modern technologies. He saw himself as a "forever learner," keen to expand on her academic grounding in software development while also staying up to date on the latest technological tactics through continuing education.
+                </p>
+                <p>Victor thinks that awareness is the key to success in life, which he demonstrates via his chess, sports, and travel hobbies. Victor is a current Moringa School student who is always up for a challenge. To connect, send an email to mmulahvictor@gmail.com.</p>
+            </div>
+            <img src="./assets/images/transparent-bg-designify.png" alt="Victor Mmulah">
         </div>
     </section>
     <section>
