--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         </div>
     </header>
     <section id="content">
-        <h1>About me</h1>
+        <h2>About me</h2>
         <div class="about-me">
-            <div>
+            <img src="./assets/images/transparent-bg-designify.png" alt="Victor Mmulah" id="image2">
+            <div class="paragraph">
                 <p>Victor Mmulah is a software engineer with expertise in web development and software design. His expertise in strategy, graphic design, and web development informs his cautious yet aggressive approach. He is motivated by his desire to comprehend modern technologies. He saw himself as a "forever learner," keen to expand on her academic grounding in software development while also staying up to date on the latest technological tactics through continuing education.
                 </p>
                 <p>Victor thinks that awareness is the key to success in life, which he demonstrates via his chess, sports, and travel hobbies. Victor is a current Moringa School student who is always up for a challenge. To connect, send an email to mmulahvictor@gmail.com.</p>
             </div>
-            <img src="./assets/images/transparent-bg-designify.png" alt="Victor Mmulah">
         </div>
     </section>
     <section>
@@ -45,7 +45,7 @@
         </footer>
     </section>
 
-    <script type="text/javascript" src="index.js"></script>
+    <script src="index.js"></script>
     
 </body>
 </html>
