style the footer

--- a/index.html
+++ b/index.html
@@ -31,16 +31,18 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="info">
         <footer>
             <h2>Services</h2>
-            <div>
-                <h3>Web Development</h3>
-                <img src="./assets/images/undraw_Code_typing_re_p8b9.png" alt="code_typing">
-            </div>
-            <div>
-                <h3>Software Design</h3>
-                <img src="./assets/images/undraw_Design_objectives_re_94pd.png" alt="design icon">
+            <div id="services">
+                <div>
+                    <h3>Web Development</h3>
+                    <img src="./assets/images/undraw_Code_typing_re_p8b9.png" alt="code_typing" class="img-footer1">
+                </div>
+                <div>
+                    <h3>Software Design</h3>
+                    <img src="./assets/images/undraw_Design_objectives_re_94pd.png" alt="design icon" class="img-footer2">
+                </div>
             </div>
         </footer>
     </section>
